fix(menu): prevent wrapping text in context menu (#3058)

--- a/styles/web/common/menu.less
+++ b/styles/web/common/menu.less
@@ -5,6 +5,10 @@
     cursor: default;
 }
 
+.k-menu .k-link {
+    white-space: nowrap;
+}
+
 .k-menu,
 .k-menu-scroll-wrapper .k-menu-group,
 .k-popups-wrapper .k-menu-group,
